Risoluzione bug dopo inserimento di github actions